[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/pieces/fir_piece.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/pieces/birch_piece.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/pieces/pine_piece.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://sounds/fail_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/swap.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/audio.gd" type="Script" id=7]
[ext_resource path="res://sounds/trees_destroy/2.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/trees_destroy/1.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/trees_destroy/4.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/trees_destroy/3.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/trees_dropping/trees-2.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/trees_dropping/trees-1.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/trees_dropping/trees-3.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/trees_protect/protect_1.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/trees_protect/protect_2.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/trees_protect/protect_4.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/trees_protect/protect_0.wav" type="AudioStream" id=18]
[ext_resource path="res://scenes/locks/lock_holder.gd" type="Script" id=19]
[ext_resource path="res://scenes/ice/ice_holder.gd" type="Script" id=20]
[ext_resource path="res://scenes/concrete/concrete_holder.gd" type="Script" id=21]

[node name="grid" type="Node2D"]
script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = -2
possible_pieces = [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ]

[node name="TreesDropping" type="AudioStreamPlayer" parent="."]
script = ExtResource( 7 )
sounds = [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ]

[node name="Destroy" type="AudioStreamPlayer" parent="."]
script = ExtResource( 7 )
sounds = [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ) ]

[node name="FailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Swap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Protect" type="AudioStreamPlayer" parent="."]
script = ExtResource( 7 )
sounds = [ ExtResource( 18 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 21 )

[connection signal="damage_concrete" from="." to="concrete_holder" method="_on_grid_damage_concrete"]
[connection signal="make_concrete" from="." to="concrete_holder" method="_on_grid_make_concrete"]
[connection signal="remove_concrete" from="concrete_holder" to="." method="_on_concrete_holder_remove_concrete"]
